# cmake_cpp

./: .inscode  CMakeLists.txt  README.html  README.md  hello.ps1  myfun.cmake
.cmake/: myfun.cmake
inc/: main.h
module1/: CMakeLists.txt  module1.cpp
module2/: CMakeLists.txt  module2.cpp  module2.h
module3/: CMakeLists.txt  module3.cpp
module3/include/: module3.h
myUtils/: CMakeLists.txt
myUtils/module1/: CMakeLists.txt
myUtils/module1/inc/: module1.h
myUtils/module1/src/: module1.cpp
myUtils/module2/: CMakeLists.txt
myUtils/module2/inc/: module2.h
myUtils/module2/src/: module2.cpp
notes/: IOoperationNote.md  Note_cmake_learn.html  Note_cmake_learn.md  cmake预定义变量.html  cmake预定义变量.md  crc16.cpp  lib和dll区别.html  lib和dll区别.md  type.html  type.md
notes随手笔记文件/: hello.sh
practice/: CMakeLists.txt
practice/src/: fun1.cpp  fun2.cpp  main.cpp
project/: CMakeLists.txt
project/prj_SDL2/: CMakeLists.txt
project/prj_SDL2/inc/: fun1.h  main.h
project/prj_SDL2/src/: main.cpp
project/prj_my_test/: CMakeLists.txt
project/prj_my_test/inc/: fun2.h
project/prj_my_test/src/: main.cpp
src/: main.cpp
